--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my Projects!</h1>
+    <h1>Welcome to my Projects</h1>
     <p>Here are some of my projects:</p>
 </body>
 </html>
